tests-system/int-literals-2/output
T test1 { v = 5.5.5 }
                 ^ int-literals-2/foo.trlc:3: error: decimal point is not allowed here
Processed 1 model(s), 0 check(s) and 1 requirement file(s) and found 1 error(s)
